--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,8 @@ ul {
     font-family: sans-serif;
     list-style: none;
     margin: 0 auto;
+    font-family: 'Lato', sans-serif;
+    font-weight: 550;
 
 }
 .hidden, figcaption {
@@ -31,6 +33,7 @@ ul {
 
 h2 {
     font-family: 'Montserrat', sans-serif;
+    color: var(--cinza);
 }
 
 img {
@@ -44,8 +47,9 @@ img {
     opacity: 100%;
 }
 
-#navD .a {
-    font-size: 13px
+
+#navD .a { 
+    font-size: 13px /* MENU font size*/
 }
 
 #navD:hover  {
@@ -80,7 +84,7 @@ img {
 /*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  */
 
 /* MEDIA QUERIES */
-@media only screen and (min-width: 320px) {
+
     /*   GERAL   */
     
     /*   CABEÇALHO/TOPO  */
@@ -152,27 +156,34 @@ img {
         padding-top: 20px;
     }
     
+    /* - Seção destaque
+    - Título: `font-size: 63px;`*/
     .secaoDestaque h2 {
         justify-content: center;
-        text-align: center;
-        font-weight: lighter;
+        text-align: center;        
         padding: 0px 60px;
         flex-grow: 0;
-        font-size: 63px;
+        font-size: 32px; 
         margin: 50px 0px 50px 0px;
+        color: var(--branco);
     }
     
+
+    /* - Seção destaque
+    - Subtítulo: `font-size: 21px;` */
     .secaoDestaque p {
         margin: 10px;
         text-align: center;
         font-size: 21px;
     }
-    
+/*     
+    - Seção destaque
+    - Botão “Subscribe”: `font-size:14px;` */
+
     /*   FORMULARIO   */
     .secaoDestaqueFormulario button {
         font-size: 14px;
         height: 2.5em;
-      
         width: 120px;
         border-radius: 0% 5% 5% 0%;
         border: 0px;
@@ -243,10 +254,17 @@ img {
         line-height: 2em;
         margin: 20px;;
     }
+
+    /* - Seção sobre:
+    - Título: `font-size: 24px;`   */
     .pythonText  h2 {
         font-size: 24px;
         padding: 50px 0px 40px 0px;
+        color: var(--cinza);
     }
+
+    /* - Seção sobre:
+  - Texto: `font-size: 19px;` */
     .pythonText  p {
         font-size: 19px;
         font-weight: 500;
@@ -254,7 +272,9 @@ img {
 
     }
     #pythonParagraph {
-        color: var(--cinza-claro);       
+        color: var(--cinza);  
+        opacity: 0.5;  
+         
     }
 
 
@@ -262,11 +282,17 @@ img {
     .js {
         background-color: var(--cinza-claro);
     }
+    
     .js h2 {
         margin: 20px 50px 30px 100px; 
-
+        font-size: 24px;`
+        color: var(--cinza);
    }
+
+       /* - Seção sobre:
+  - Texto: `font-size: 19px;` */
     .js ul {
+        font-size: 19px;
         margin: 60px 75px 70px 75px;
         padding-left: 30px;
         padding-bottom: 50px;
@@ -284,6 +310,7 @@ img {
         display: flex;
         flex-direction: column;
         background-color: white;
+        color: var(--cinza;)
     }
     
     .topCursos {
@@ -292,6 +319,7 @@ img {
     
     .topCursos h2 {
         margin: 25px;
+        color: var(--cinza);
     }
     
     .secaoCursos img {
@@ -313,6 +341,7 @@ img {
         text-align: center;
         margin: 20px 0px;
         font-weight: bold;
+        color: var(--cinza);
     }
     
     .secaoCursos article li p {
@@ -320,11 +349,20 @@ img {
         text-align: center;
         font-weight: lighter;
     }
+
+    /* - Seção curses:
+  - Título ítens: `font-size: 19px; */
     .secaoCursos h3 {
         font-size: 19px;
+        color: var(--cinza);
     }
+
+    /* - Seção curses:
+  - Texto ítens: `font-size: 15px;` */
     .secaoCursos p {
         font-size: 15px;
+        color: var(--cinza);
+        opacity: 0.7;
     }
     
     /*   CALENDARIO   */
@@ -340,6 +378,9 @@ img {
         margin: 0 auto;
     }
     
+    /* - Seção calendário:
+  - Datas: `font-size: 36px;`
+   */
     .calendario-data {
         position: relative;
         display: inline-block;
@@ -360,24 +401,33 @@ img {
     .secaoCalendar p {
         margin-top: -25px;
         margin-bottom: 10px;
+        color: var(--cinza);
+        opacity: 0.7;
     }
     
     .secaoCalendar h2 {
         margin: 50px 0px;
+        color: var(--cinza);
     }
     
+
+    /*   - Título: `font-size: 19px;` */
     .calendario h3 {
         margin: 30px 0px;
         font-size: 19px;
+        color: var(--cinza);
     }
     
+    /* Texto: `font-size: 15px;` */
     .calendario p {
         font-weight: lighter;
         font-size: 15px;
         text-align: center;
         padding: 0px 4px;
         margin-bottom: 10px;
-        line-height:1.5
+        line-height:1.5;
+        color: var(--cinza);
+        opacity: 0.7;
     }
 
     .calHr {
@@ -401,6 +451,7 @@ img {
         margin-bottom: 15px;
     }
     
+    /* - Botão “Sign Up”: `font-size: 32px;` */
     .calendario-data-rodape button {
         position: relative;
         bottom: 0%;
@@ -449,6 +500,7 @@ img {
         width: 300px;
     }
 
+ 
     .secaoContatoInput h2 {
         display: inline-block;
         position: absolute;
@@ -459,18 +511,25 @@ img {
         font-size: 32px;
         text-transform: uppercase;
         font-weight: 500;
+        color: var(--cinza);
     }
 
+    /* - Seção contato: 
+  - Informações: `font-size: 15px;` */
     .secaoContato-informacoes p {
         margin: 25px;
         line-height: 2;
         font-size: 15px;
+        color: var(--cinza);
+        opacity: 0.7;
     }
     
     .secaoContato-informacoes ul {
         line-height: 2;
         margin-bottom: 30px;
         margin-left: 25px;
+        color: var(--cinza);
+        opacity: 0.7;
     
     }    
     .secaoContato-informacoes ul img {
@@ -534,7 +593,7 @@ img {
     footer {
         display: none;
     }
-}
+
 
     /*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  */
     @media only screen and (min-width:778px) {
@@ -582,6 +641,10 @@ img {
             display: flex;
         }
 
+        .secaoDestaque h2 {
+            font-size:63px;
+            color: var(--branco);
+        }
         /* SOBRE */
         .python {
             margin: 20px;
@@ -619,7 +682,7 @@ img {
             margin-top: 50px;
         }
         .secaoCursos article ul {
-            max-width: 1000px;
+            max-width: 900px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -651,6 +714,7 @@ img {
         .secaoContatoInput h2{
             display: flex;
             margin-left: 190px;
+            color: var(--cinza);
         }
         #email {
             width: 192px;
